# CSE496

./: .gitignore  CMakeLists.txt  defines.hpp  handleHttpClient.cpp  main.cpp  motionDetectionLoop.cpp  motion_detect.cpp  sanitizeFilename.cpp  startHttpServer.cpp  utils.hpp
ChunkManager/: CMakeLists.txt
ChunkManager/include/: Chunk.hpp  ChunkIterator.hpp  ChunkManager.hpp  ChunkService.hpp  DeviceChunkManager.hpp  FileChunkManager.hpp  MemoryChunkManager.hpp
ChunkManager/src/: ChunkManager.cpp  DeviceChunkManager.cpp  FileChunkManager.cpp  MemoryChunkManager.cpp
FileSystem/: CMakeLists.txt
FuseCommands/: CMakeLists.txt
FuseCommands/include/: Fuse.hpp
FuseCommands/src/: Fuse.cpp
doc/: second_presentation.md
doc/diagrams/: class-diagrams.puml
doc/second-presentation/: presentation.md
